# rmcp-presence

./: Cargo.toml  README.md  tools.toml.example
src/: config.rs  main.rs
src/actuators/: audio.rs  breakrs.rs  camera.rs  clipboard.rs  microphone.rs  mod.rs  ollama.rs  open.rs  printers.rs  screenshot.rs  trash.rs
src/linux/: audio_status.rs  bluer.rs  brightness.rs  dbus.rs  i3.rs  logind.rs  mod.rs  mpris.rs  pulseaudio.rs  systemd.rs  xdotool.rs
src/sensors/: battery.rs  bluetooth.rs  context.rs  display.rs  git.rs  idle.rs  mod.rs  network.rs  peripherals.rs  sysinfo.rs  usb.rs  weather.rs
src/shared/: mod.rs
